More updates to Arkansas slides.

--- a/Fsing/TestIdealsBeamer/TestIdealsTalk-Schwede-Arkansas2018.tex
+++ b/Fsing/TestIdealsBeamer/TestIdealsTalk-Schwede-Arkansas2018.tex
@@ -163,8 +163,8 @@
 \subtitle
 {The {\tt TestIdeals} package for Macaulay2}
 
-\author[BoHeKaKaMaRoScSmTeWi] % (optional, use only with lots of authors)
-{Alberto F. Boix, Daniel Hern\'andez, Zhibek Kadyrsizova, Mordechai Katzman, Sara Malec, Marcus Robinson, Karl Schwede\inst{1}, Daniel Smolkin, Pedro Teixeira, Emily Witt}
+\author[BeBoBrElHeKaKaMaMaMoRoScSmTeWi] % (optional, use only with lots of authors)
+{Erin Bela, Alberto F. Boix, Juliette Bruce, Drew Ellingson, Daniel Hern\'andez, Zhibek Kadyrsizova, Mordechai Katzman, Sara Malec, Matthew Mastroeni, Maral Mostafazadehfard, Marcus Robinson, Karl Schwede\inst{1}, Daniel Smolkin, Pedro Teixeira, Emily Witt}
 % - Give the names in the same order as the appear in the paper.
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
