Wrote beamer slides for Hawaii AMS Sectional.

--- a/Fsing/TestIdealsBeamer/TestIdealsTalk-Schwede-Arkansas2018.tex
+++ b/Fsing/TestIdealsBeamer/TestIdealsTalk-Schwede-Arkansas2018.tex
@@ -323,7 +323,7 @@ o8 = false
     \begin{itemize}
       \item<11->  Analogs of log canonical thresholds.
     \end{itemize}
-    
+
   \end{itemize}
 \end{frame}
 
@@ -352,7 +352,7 @@ I^{[p^e]} : I \cong \{ \phi \in \Hom_S(S^{1/p^e}, S) \;|\; \phi(I^{1/p^e}) \subs
   One more big tool.
   \begin{itemize}
     \item<2->  There exists $\Phi : S^{1/p^e} \to S$.
-    \item<3->  $\Phi\Big(x_1^{p^e - 1 \over p^e} \cdots x_1^{p^e - 1 \over p^e}\Big) = 1$
+    \item<3->  $\Phi\Big(x_1^{p^e - 1 \over p^e} \cdots x_n^{p^e - 1 \over p^e}\Big) = 1$
     \item<4->  Other monomials to 0.
     \item<5->  $\Phi$ generates $\Hom_S(S^{1/p^e}, S)$.
     \item<6->  $\Phi$ is Grothendieck dual to Frobenius.
@@ -363,7 +363,7 @@ I^{[p^e]} : I \cong \{ \phi \in \Hom_S(S^{1/p^e}, S) \;|\; \phi(I^{1/p^e}) \subs
     \begin{theorem}[Fedder restated]
       \[
       \Phi((I^{[p^e]} : I)^{1/p^e}) \equiv_I \Image(\Hom_R(R^{1/p^e}, R) \xrightarrow{@1} R)
-      \] 
+      \]
       defines locus where $R = S/I$ is not $F$-pure.
     \end{theorem}
   \end{itemize}
@@ -518,7 +518,7 @@ Appeared in work of Anurag Singh (deform $F$-regularity)
 
 \begin{frame}[fragile]{$F$-injective}
     We can also study $F$-injective singularities (analog of Du~Bois).
-    
+
         \begin{definition}
         $R$ is \memph{$F$-injective} if
         \[
