Changes in doc for testModule

--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -762,7 +762,7 @@ o7 = true
 \end{MyVerbatim}
 }\medskip
 
-The algorithm used by \texttt{isFRational} first checks if the ring is Cohen-Macaulay, unless the option \texttt{isCohenMacaulay} is set to \texttt{true}. If the ring
+The algorithm used by \texttt{isFRational} first checks if the ring is Cohen-Macaulay, unless the option \texttt{AssumeCM} is set to \texttt{true}. If the ring
 is not Cohen-Macaulay then \texttt{false} is returned. Next, the algorithm
 computes the test module $M \subseteq \omega_{R}$ and checks to see if
 $\omega_{R} \subseteq M$;  see the next section for the description of a test module.
