--- a/Fsing/TestIdealsPaper/MainBib.bib
+++ b/Fsing/TestIdealsPaper/MainBib.bib
@@ -2790,7 +2790,7 @@ MRREVIEWER = {Scott R. Nollet},
 @Unpublished{hernandez+etal.frobenius_examples,
   Title                    = {Frobenius powers of some monomial ideals},
   Author                   = {Hern\'andez, D. J. AND Teixeira, P. AND Witt, E. E.},
-  Note                     = {preprint, \href{https://arxiv.org/abs/1808.09508}{arXiv:1808.09508 [math.AC]}},
+  Note                     = {to appear in J. Pure Appl. Algebra, \href{https://arxiv.org/abs/1808.09508}{arXiv:1808.09508 [math.AC]}},
   Year                     = {2018}
 }
 
