--- a/Fsing/TestIdealsBeamer/TestIdealsTalk-Schwede-Arkansas2018.tex
+++ b/Fsing/TestIdealsBeamer/TestIdealsTalk-Schwede-Arkansas2018.tex
@@ -573,7 +573,7 @@ o5 = ideal 1
 \end{verbatim}
 \begin{itemize}
 \item<2->We can compute $\tau(R, f^{t-\epsilon})$, which is used to compute jumping numbers and $F$-pure thresholds.
-\item<3->Needs {\tt HSLGModule} function.
+\item<3->Needs {\tt FPureModule} function.
 \end{itemize}
 \end{frame}
 
