--- a/Fsing/TestIdealsPaper/TestIdeals_REMOTE_5127.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals_REMOTE_5127.tex
@@ -459,10 +459,10 @@ Again consider the maps $T^e : \omega_{R^{1/p^e}} \to \omega_R$ we have consider
 \[
 \omega_R \supseteq T(\omega_{R^{1/p}}) \supseteq \dots \supseteq T^e(\omega_{R^{1/p^e}}) \supseteq T_{e+1}(\omega_{R^{1/p^{e+1}}}) \supseteq \dots
 \]
-stabilize for $e \gg 0$.  The function {\tt HSLGModule} computes this.
+stabilize for $e \gg 0$.  The function {\tt FPureModule} computes this.
 \begin{verbatim}
 i4 : R = ZZ/3[x,y,z]/ideal(x^3+y^4+z^5);
-i5 : L = HSLGModule(R);
+i5 : L = FPureModule(R);
 i6 : L#0
                           2        2   3
 o6 = ideal (0, y*z, x*z, y , x*y, x , z )
